--- a/src/App.css
+++ b/src/App.css
@@ -3,6 +3,7 @@
 body {
   margin: 0;
   padding-top: 0;
+ 
 }
 
 .navbar {
@@ -21,12 +22,16 @@ body {
 
 .nav-group {
   display: flex;
-  margin-right: 10px;
+  margin-right: 20px;
+ 
 }
 
 .nav {
   margin-left: 40px;
-  padding: 20px;
+  padding: 30px;
+  color: beige;
+  text-decoration: none;
+  cursor: pointer;
 }
 
 .sidebar {
@@ -36,14 +41,17 @@ body {
   height: 906px;
   width: 125px;
   background-color: rgba(250, 250, 255, 1);
+
 }
 
 .side {
   padding-left: 15px;
+ 
 }
 
 .nutrition {
   margin-top: 50px;
+
 }
 
 .fitness {
@@ -271,4 +279,128 @@ body {
 
 .image-hover-effect:hover .hover-text {
   opacity: 1;
+}
+
+
+/* Login css */
+.form-container {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 100vh;
+}
+
+.form-login {
+  border: 1px solid #ccc;
+  padding: 90px;
+  border-radius: 8px;
+  max-width: 400px;
+  width: 100%;
+  background-color: #f5f5f5;
+  border: none;
+}
+
+.form-login label {
+  display: block;
+  margin-bottom: 8px;
+  font-weight: bold;
+}
+
+.form-login input {
+  width: 100%;
+  padding: 10px;
+  margin-bottom: 15px;
+  border: 1px solid #bab9b9;
+  border-radius: 4px;
+}
+
+.form-login button {
+  width: 100%;
+  padding: 15px;
+  background: linear-gradient(to right, black, rgba(120, 109, 109, 0.5));
+
+  color: #fff;
+  border: none;
+  border-radius: 4px;
+  cursor: pointer;
+}
+
+.form-login button:hover {
+  background-color: #0056b3;
+}
+
+.form-login input:focus,
+.form-login button:focus {
+  outline: none;
+}
+
+
+/* Signup.css */
+.form-containerr {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 100vh;
+ 
+  
+}
+
+.form-signup {
+  display: flex;
+  flex-direction: column;
+  border: 1px solid #ccc;
+  padding: 90px;
+  border-radius: 8px;
+  max-width: 400px;
+  width: 100%;
+  background-color: #f5f5f5;
+  border: none;
+ 
+}
+
+.form-signup label {
+  display: block;
+  margin-bottom: 8px;
+  font-weight: bold;
+}
+
+.form-signup input {
+  padding: 10px;
+  margin-bottom: 15px;
+  border: 1px solid #ccc;
+  border-radius: 5px;
+  font-size: 16px;
+}
+
+.form-signup button {
+  width: 100%;
+  padding: 15px;
+  background: linear-gradient(to right, black, rgba(120, 109, 109, 0.5));
+
+  color: #fff;
+  border: none;
+  border-radius: 4px;
+  cursor: pointer;
+}
+
+.form-signup button:hover {
+  background-color: #405c80;
+}
+
+.form-signup button:active {
+  background-color: #2c4463;
+}
+
+.form-signup button:focus {
+  outline: none;
+}
+
+.error {
+  color: #ff0000;
+  margin-top: 5px;
+}
+
+.success {
+  color: #008000;
+  margin-top: 5px;
 }
