--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,160 @@
+
 .App {
+  background-color: #FBFBFB;
+}
+.fit {
+  background-color: #272727;
+  width: 1830px;
+  height: 60px;
+  padding: 3px;
+
+ 
+}
+
+#source {
+  width: 100%;
+  max-height: 48vh; 
+  object-fit: cover; 
+}
+#frame {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  gap: 19px;
+}
+#topic {
   text-align: center;
+  color: #FBFBFB;
+  position: relative;
+  bottom: 10px;
+  right: 800px;
+}
+.myArticle {
+  
+  width: 1000px;
+  text-align: center;
+  position: relative;
+  left: 210px;
+  padding: 80px;
+}
+.coverArticle{
+  background-color: #272727;
+  height: 560px;
+  width: 1900px;
+}
+.optional {
+  width: 680px;
+  text-align: center;
+  position: relative;
+  left: 200px;
+  top: 150px;
+  height: 40px;
+  border-radius: 10px;
+  background-color:#FBFBFB;
+  color: #272727;
+  font-size: medium;
+  font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+}
+.articlePage{
+  width: 1850px;
+  background-color: #FBFBFB;
+  height: 1800px;
+  position: relative;
+  bottom: 1530px;
+  right: 290px;  
+  
+}
+.fitFooter {
+  background-color: #272727;
+  height: 160px;
+  padding: 3px;
+  width: 100%;
+  
+}
+#aboutme {
+  color: white;
+  text-align: center;
+  position: relative;
+  bottom: 60px;
+  left: 790px;
+  cursor: pointer;
+}
+#abouted {
+  position: relative;
+  left: 18px;
+  cursor: pointer;
+}
+#myHeader {
+  color: #FBFBFB;
+  text-align: center;
+  font-family: Arial, Helvetica, sans-serif;
+  position: relative;
+  top: 40px;
+  right: 30px;
+  font-size: xx-large;
+}
+#healthy {
+  width: 400px;
+  height: 260px;
+  position: relative;
+  top: 80px;
+  left: 730px;
+
+}
+#goback {
+  background-color: #272727;
+  color: #FBFBFB;
+  padding: 9px 6px;
+  border-radius: 5px;
+  position: relative;
+  right: 850px;
+  margin-top: 20px;
+
+}
+#nutritionimg {
+  border-bottom-left-radius: 100px ;
+  height: 390px;
+}
+.extraResources {
+  margin-top: -120px;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.extraResources h2 {
+  text-align: center;
+  margin-bottom: 50px;
+  text-decoration: underline;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+.cardsContainer {
+  display: flex;
+  justify-content: space-around;
+  margin-bottom: 50px;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.card {
+  width: 300px;
+  height: 400px;
+  border: 2px solid white;
+  padding: 10px;
   display: flex;
   flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
+  justify-content: space-between;
+  border-radius: 5px;
+
+}
+
+.card img {
+  width: 100%;
+  height: 70%;
+  object-fit: cover;
+}
+
+.card button {
+  width: 100%;
+  padding: 10px;
+  background-color: black;
   color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+  border: none;
+  cursor: pointer;
+  border-radius: 8px;
 }
