--- a/src/App.css
+++ b/src/App.css
@@ -3,8 +3,11 @@
 body {
   margin: 0;
   padding-top: 0;
- 
+   font-family: "Arial", sans-serif;
+  
+
 }
+
 
 .navbar {
   position: fixed;
@@ -62,11 +65,15 @@ body {
   margin-top: 50px;
 }
 
-.image {
+ .image {
   border-radius: 10px;
   width: 35cm;
   height: 20cm;
+
 }
+
+
+
 
 .homepage {
   display: flex;
@@ -90,6 +97,12 @@ body {
   overflow: hidden; 
   padding: 20px;
 }
+
+ @media (max-width: 768px) {
+  .videos-container {
+    grid-template-columns: 1fr; 
+  }
+} 
 
 
 
@@ -384,7 +397,7 @@ body {
 }
 
 .form-signup button:hover {
-  background-color: #405c80;
+  background-color: #0056b3;
 }
 
 .form-signup button:active {
