--- a/src/App.css
+++ b/src/App.css
@@ -732,3 +732,13 @@ h3 {
   margin-top: 100px;
   margin-bottom: 30px;
 }
+.go-back{
+  display: block;
+  text-align: center;
+  margin-top: 20px;
+  color: #fff;
+  background-color: #151516;
+  padding: 10px 20px;
+  text-decoration: none;
+  border-radius: 5px;
+  transition: background-color 0.3s ease;}
